iptables.save
# Generated by iptables-save v1.6.1 on Tue May 21 15:58:26 2019
*nat
:PREROUTING ACCEPT [593:85820]
:INPUT ACCEPT [110:6209]
:OUTPUT ACCEPT [857:105997]
:POSTROUTING ACCEPT [857:105997]
-A PREROUTING -i enp2s0 -p tcp -m tcp --dport 8585 -j REDIRECT --to-ports 80
-A PREROUTING -i enp2s0 -p tcp -m tcp --dport 20:2121 -j DNAT --to-destination 192.168.0.50
-A POSTROUTING -s 10.8.0.0/24 -o enp2s0 -j MASQUERADE
COMMIT
# Completed on Tue May 21 15:58:26 2019
# Generated by iptables-save v1.6.1 on Tue May 21 15:58:26 2019
*mangle
:PREROUTING ACCEPT [18279:8520142]
:INPUT ACCEPT [8507:1278895]
:FORWARD ACCEPT [9760:7239941]
:OUTPUT ACCEPT [10881:7762552]
:POSTROUTING ACCEPT [20832:15016760]
COMMIT
# Completed on Tue May 21 15:58:26 2019
# Generated by iptables-save v1.6.1 on Tue May 21 15:58:26 2019
*filter
:INPUT DROP [0:0]
:OUTPUT DROP [0:0]
:FORWARD DROP [0:0]
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25565 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2121 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8082 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8083 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8084 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8087 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 11000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25565 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1688 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1337 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4040 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 27017 -j ACCEPT
-A INPUT -p tcp -m tcp -m state -i enp2s0 --dport 22 --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp -i enp2s0 --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp -i enp2s0 --dport 8585 -j ACCEPT
-A INPUT -p udp -m udp --dport 137 -j ACCEPT
-A INPUT -p udp -m udp --dport 138 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 445 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 32400 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 32469 -j ACCEPT
-A INPUT -p udp -m udp -s 192.168.0.0/24 --dport 137 -j ACCEPT
-A INPUT -p udp -m udp -s 192.168.0.0/24 --dport 138 -j ACCEPT
-A INPUT -p tcp -m tcp -s 192.168.0.0/24 --dport 139 -j ACCEPT
-A INPUT -p tcp -m tcp -s 192.168.0.0/24 --dport 445 -j ACCEPT
-A INPUT -p udp -m state -m udp -i enp2s0 --dport 1194 --state NEW -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A INPUT -p udp -m udp --dport 69 -j ACCEPT
-A INPUT -p udp -m udp -s 192.168.0.0/24 --dport 69 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp -s 127.0.0.0/8 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j DROP
-A INPUT -p tcp -m tcp -i enp2s0 --dport 3306 -j ACCEPT
-A FORWARD -i tun+ -j ACCEPT
-A FORWARD -m state -i tun+ -o enp2s0 --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state -i enp2s0 -o tun+ --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p icmp -m icmp -m limit --icmp-type 8 --limit 1/sec -j ACCEPT
-A FORWARD -p tcp -m limit --limit 1/sec -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp -m tcp -m limit --tcp-flags FIN,SYN,RST,ACK RST --limit 1/sec -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG SYN,ACK -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp -m state -o enp2s0 --sport 22 --state ESTABLISHED -j ACCEPT
-A OUTPUT -o tun+ -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Tue May 21 15:58:26 2019
# Generated by iptables-save v1.6.1 on Tue May 21 15:58:26 2019
*raw
:PREROUTING ACCEPT [18279:8520142]
:OUTPUT ACCEPT [10881:7762552]
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
-A PREROUTING -d 192.168.0.50/32 -p tcp -m tcp --dport 2121 -j CT --helper ftp
COMMIT
# Completed on Tue May 21 15:58:26 2019
